# login_assignment_Leonel

wdobackend/: .env.example  .gitignore  manage.py  pyproject.toml  requirements.txt  updated_files.rar
wdobackend/.well-known/: verification-file.txt
wdobackend/accounts/: forms.py  models.py  urls.py  utils.py  views.py
wdobackend/accounts/migrations/: 0001_initial.py  0003_useraccount_role.py  0004_address_qualification_userdocuments_and_more.py  0005_qualification_roll_no.py  0006_rename_adahar_card_userdocuments_aadhar_card_and_more.py  0007_rename_email_userpersonaldetails_email_address.py  0008_alter_useraccount_address_and_more.py  0009_rename_alterphone_userpersonaldetails_alter_phone.py  0010_alter_userpersonaldetails_avatar.py  0011_alter_address_city_alter_address_state_and_more.py  0012_alter_userqualification_other_qualification_and_more.py  0013_userdocuments_experience_certificate.py
wdobackend/auth_system/: settings.py  urls.py  views.py
wdobackend/config/: settings.py  urls.py
wdobackend/requirements/: base.txt
wdobackend/templates/: home.html
wdobackend/templates/car/: garage.html  upload_form.html
wdobackend/templates/registration/: login.html
wdobackend/tests/: testconnection.py
wdobackend/v1/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
wdobackend/v1/accounts/migrations/: 0001_initial.py  0002_auto_20230731_0639.py  0003_auto_20230731_0643.py
wdobackend/v1/accounts/templatetags/: custom_tags.py
wdobackend/v1/post/: urls.py
wdobackend/v1/post/migrations/: 0002_auto_20230726_1338.py
(+111 files in other folders)
