[tool.poetry]
name = "wdobackend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.6.0"
autopep8 = "2.0.2"
certifi = "2023.5.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
cryptography = "40.0.2"
defusedxml = "0.7.1"
distlib = "0.3.7"
django = "4.2.1"
django-cors-headers = "4.2.0"
django-dotenv = "1.4.2"
django-templated-mail = "1.1.1"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
djoser = "2.2.0"
filelock = "3.12.2"
idna = "3.4"
mysqlclient = "2.2.0"
oauthlib = "3.2.2"
platformdirs = "3.10.0"
psycopg2-binary = "2.9.6"
pycodestyle = "2.10.0"
pycparser = "2.21"
pyjwt = "2.7.0"
python3-openid = "3.2.0"
pytz = "2023.3"
requests = "2.30.0"
requests-oauthlib = "1.3.1"
social-auth-app-django = "5.2.0"
social-auth-core = "4.4.2"
sqlparse = "0.4.4"
tomli = "2.0.1"
typing-extensions = "4.7.1"
tzdata = "2023.3"
urllib3 = "2.0.2"
virtualenv = "20.24.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
